finilized the get methods